--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -46,4 +46,13 @@
    :root {
       font-size: 16px
    }
+   #navbar_container {
+      flex-flow: column nowrap;
+      #link_box {
+         margin-top: 1rem;
+      }
+      #title {
+         margin-top: .66rem;
+      }
+   }
 }
